# sageRefiner

./: .copilot-instructions  .gitignore  .pre-commit-config.yaml  .secrets.baseline  HOOKS_SETUP_SUMMARY.md  PRE_COMMIT_GUIDE.md  README.md  __init__.py  pyproject.toml  quickstart.sh  setup.py
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: refiner.agent.md  sage-refiner.agent.md
.github/workflows/: ci-tests.yml  publish.yml
algorithms/: __init__.py
algorithms/LongRefiner/: __init__.py  compressor.py  prompt_template.py
algorithms/reform/: __init__.py  compressor.py  model_utils.py  operator.py
benchmarks/: README.md  STRUCTURE.md  __init__.py  cli.py
benchmarks/analysis/: __init__.py  find_heads.py  head_analysis.py  latex_export.py  statistical.py  visualization.py
benchmarks/config/: __init__.py  config_baseline.yaml  config_ehpc.yaml  config_llmlingua2.yaml  config_longllmlingua.yaml  config_longrefiner.yaml  config_provence.yaml  config_recomp_abst.yaml  config_recomp_extr.yaml  config_reform.yaml  head_analysis_config.yaml
benchmarks/experiments/: __init__.py  base_experiment.py  comparison_experiment.py  results_collector.py  runner.py
benchmarks/implementations/: __init__.py
benchmarks/implementations/pipelines/: __init__.py  baseline_rag.py  ehpc_rag.py  llmlingua2_rag.py  longllmlingua_rag.py  longrefiner_rag.py  provence_rag.py  recomp_abst_rag.py  recomp_extr_rag.py  reform_rag.py
docs/: PRE_COMMIT.md  README.md  RELEASE.md
docs/adr/: 0001-algorithm-inference-decoupling.md  0002-core-compression-extraction-regression-suite.md  0003-torch-transformers-usage-convergence.md
examples/: algorithm_comparison.py  basic_compression.py
sage_refiner/: __init__.py  config.py
sage_refiner/algorithms/: __init__.py
sage_refiner/algorithms/EHPC/: __init__.py  config.py  operator.py
sage_refiner/algorithms/EHPC/probe/: __init__.py
sage_refiner/algorithms/EHPC/scripts/: find_heads.py
sage_refiner/algorithms/LongRefiner/: compressor.py
sage_refiner/algorithms/adaptive/: __init__.py  compressor.py  density.py  granularity.py  operator.py  query_classifier.py
sage_refiner/algorithms/llmlingua/: __init__.py  compressor.py  operator.py
sage_refiner/algorithms/llmlingua2/: __init__.py  compressor.py  operator.py
sage_refiner/algorithms/longllmlingua/: __init__.py  compressor.py  operator.py
sage_refiner/algorithms/provence/: __init__.py
sage_refiner/algorithms/recomp_abst/: __init__.py  compressor.py  operator.py
sage_refiner/algorithms/recomp_extr/: __init__.py  compressor.py  operator.py
src/sageRefiner/: __init__.py
src/sageRefiner/algorithms/: __init__.py
src/sage_libs/sage_refiner/: __init__.py  _version.py
src/sage_libs/sage_refiner/algorithms/provence/: operator.py
src/sage_libs/sage_refiner/algorithms/recomp_abst/: compressor.py
src/sage_libs/sage_refiner/algorithms/recomp_extr/: operator.py
src/sage_refiner/: __init__.py  _version.py
src/sage_refiner/algorithms/: __init__.py
src/sage_refiner/algorithms/EHPC/: __init__.py  compressor.py  operator.py
src/sage_refiner/algorithms/LongRefiner/: __init__.py  compressor.py  operator.py  prompt_template.py
src/sage_refiner/algorithms/llmlingua2/: __init__.py  operator.py
src/sage_refiner/algorithms/longllmlingua/: __init__.py  compressor.py  operator.py
src/sage_refiner/algorithms/provence/: compressor.py  operator.py
src/sage_refiner/algorithms/recomp_abst/: compressor.py  operator.py
src/sage_refiner/algorithms/recomp_extr/: __init__.py  compressor.py  operator.py
src/sage_refiner/algorithms/reform/: model_utils.py  operator.py
tests/: __init__.py  test_cli.py  test_experiments.py  test_init.py  test_issue15_algorithm_boundary.py  test_issue16_operator_failfast.py  test_issue16_torch_transformers_usage_convergence.py  test_issue17_compression_extraction_regression.py  test_latex_export.py  test_llmlingua2.py  test_long_refiner.py  test_longllmlingua.py  test_multi_dataset.py  test_provence.py  test_reform.py  test_results_collector.py  test_statistical.py  test_visualization.py
utils/hooks/: pre-push-hook.sh  setup-hooks.sh
utils/installation/: common.sh  dependencies.sh  example.sh  install.sh  precommit.sh  tests.sh  verify.sh
