[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isage-refiner"
version = "0.1.0.0"
description = "SAGE Refiner Framework - Context compression for RAG (LongRefiner, REFORM, Provence)"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "IntelliStream Team", email = "shuhao_zhang@hust.edu.cn" }
]
keywords = [
    "refiner",
    "context-compression",
    "RAG",
    "LongRefiner",
    "REFORM",
    "LLM",
    "AI",
]

dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.4.0",
]

[project.urls]
"Homepage" = "https://github.com/intellistream/sageRefiner"
"Repository" = "https://github.com/intellistream/sageRefiner"

[tool.setuptools.packages.find]
where = ["src"]
include = ["sage_libs*"]

[tool.setuptools.package-dir]
"" = "src"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
