[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isage-refiner"
version = "0.1.0.10"
description = "Intelligent context compression algorithms for LLM systems"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [
    {name = "IntelliStream Team", email = "shuhao_zhang@hust.edu.cn"}
]
keywords = ["rag", "llm", "compression", "context", "nlp", "ai", "ml"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Lightweight utilities
    "numpy>=1.24.0,<3.0.0",
    "pyyaml>=6.0,<7.0",
    "json-repair>=0.30.0,<1.0.0",
    "tqdm>=4.65.0",
    "rich>=13.0.0,<15.0.0",  # Updated to allow rich 14.x
    # SAGE framework (core L3 dependencies only)
    "isage-common",
    "isage-libs",
    # NOTE: torch/transformers are NOT listed here (no forced install).
    # Use the [full] extras for ML backend: pip install -e .[full]
]

[project.optional-dependencies]
# Install HuggingFace ML stack for running algorithms:
#   pip install -e .[full]
# Install dev tools + all backends (for testing / CI):
#   pip install -e .[dev]  ← dev already includes [full]
full = [
    # HuggingFace ML stack (required by all compression algorithms)
    "torch>=2.0.0,<3.0.0",
    "transformers>=4.52.0,<6.0.0",
]
dev = [
    # dev includes the ML stack — no need for pip install -e .[dev,full]
    "isage-refiner[full]",
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "pandas>=2.0.0",
    "datasets>=2.14.0",
]

[project.urls]
Homepage = "https://github.com/intellistream/sageRefiner"
Documentation = "https://intellistream.github.io/SAGE/"
Repository = "https://github.com/intellistream/sageRefiner"
"Bug Tracker" = "https://github.com/intellistream/sageRefiner/issues"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["tests*", "examples*", "benchmarks*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "DTZ", "PIE", "PT", "RET", "SIM"]
ignore = [
    "E501",   # Line too long (handled by formatter)
    "E402",   # Module level import not at top (needed for warnings setup)
    "N806",   # Variable in function should be lowercase (Q, K, V are conventional)
    "N812",   # Lowercase imported as non-lowercase (F alias is common)
    "B905",   # zip without strict (Python 3.9 compatibility)
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
